# Topicos-3---IMAGE-PROCESSING-

./: README.md  Trab V func
Trabalho I/: 12003.ppm  IOHeader.h  Warmup filtro.cpp  dataset.txt  readme
Trabalho I/trab1/: IOHeader.h  Trab1.cpp  dataset.txt  sphereset.txt
Trabalho II/: convolution.c  convolution.cpp  convolution.h  git.pgm  git.ppm  kernel2.txt
Trabalho IV/: CMakeLists.txt  flood.cpp  flood.hpp  main.cpp
Trabalho V/: CMakeLists.txt  detect.cpp
Trabalho V funcionando/: CMakeLists.txt  main.cpp  shape.h  triangle.h
Warmup 1/: IOHeader.h  Warmup filtro.cpp  readme
